# beatwatch-process

./: README.md  pyproject.toml  test.html
src/bangle_process/: filedata.py  process.py  visualize.py
src/beatwatch_process/: __init__.py  parsers.py
tests/data/: 03-01_time_21-13-42_a6ed_W023.hr  03-01_time_21-13-42_a6ed_W023_errors.hr  03-02_time_00-35-31_4953_W027.hr  03-02_time_01-53-40_f937_W025.sv  03-02_time_01-54-00_a13c_W009.hr  03-02_time_03-35-17_52a8_W037.sv  06-09_time_17-26-24_25fa_W034_accel.csv  11-05_time_04-07-15_50c6_W030.csv
