[project]
name = "beatwatch-process"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Maya", email = "mayabflannery@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "datashader>=0.18.2",
  "hvplot>=0.12.1",
  "pandas>=2.3.3",
  "pandas-stubs>=2.3.2.250926",
  "scipy>=1.16.2",
  "scipy-stubs>=1.16.2.4",
]

[project.scripts]
beatwatch-process = "beatwatch_process:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "basic"
